@@ -7,13 +7,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.http.ResponseCookie;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtCookieAuthenticationFilter extends OncePerRequestFilter {
@@ -32,7 +33,9 @@ public class JwtCookieAuthenticationFilter extends OncePerRequestFilter {
 
         if (token != null && jwtConfig.validateToken(token)) {
             String email = jwtConfig.extractEmail(token);
-            var auth = new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+            String role = jwtConfig.extractRole(token);
+            var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+            var auth = new UsernamePasswordAuthenticationToken(email, null, authorities);
             auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
             SecurityContextHolder.getContext().setAuthentication(auth);
 
